<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".Pergunta1">

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:textColor="@color/cinzaClaro"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numero1"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:textStyle="italic"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="164dp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:srcCompat="@drawable/gaviao" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pergunta1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="20sp"
        android:fontFamily="sans-serif-condensed-light"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="208dp" />

    <RadioGroup
        android:id="@+id/rgpPergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="347dp"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        android:layout_marginTop="30sp">

        <RadioButton
            android:id="@+id/rbtA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="14sp"
            android:text="@string/a1"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:buttonTint="@color/cinzaClaro"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rbtB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingLeft="14sp"
            android:text="@string/b1"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:buttonTint="@color/cinzaClaro"
            />

        <RadioButton
            android:id="@+id/rbtC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="14sp"
            app:buttonTint="@color/cinzaClaro"
            />

        <RadioButton
            android:id="@+id/rbtD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="14sp"
            app:buttonTint="@color/cinzaClaro"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btnProxima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14sp"
        app:cornerRadius="15sp"
        android:layout_marginTop="30sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:backgroundTint="@color/roxo"
        android:backgroundTintMode="@color/roxoClick"
        android:text="@string/proxima"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="611dp"
        />
</LinearLayout>