<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".IniciarQuiz">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="45sp"
        app:layout_constraintBottom_toTopOf="@+id/btnJogar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/logo"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/osVingadores"
        android:textSize="32sp"
        android:textStyle="italic"
        android:layout_marginTop="10sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digiteNome"
        android:textSize="20sp"
        android:layout_marginStart="22sp"
        android:layout_marginEnd="22sp"
        android:layout_marginTop="80sp"
        android:paddingBottom="15sp"
        tools:layout_editor_absoluteX="153sp"
        tools:layout_editor_absoluteY="208sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22sp"
        android:layout_marginEnd="22sp"
        android:ems="10"
        android:hint="@string/nome"
        android:textSize="25sp"
        android:inputType="text"
        android:background="@color/white"
        android:padding="12sp"
        tools:layout_editor_absoluteX="-34sp"
        tools:layout_editor_absoluteY="419sp" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14sp"
        app:cornerRadius="15sp"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:backgroundTint="@color/verde"
        android:backgroundTintMode="@color/verdeClick"
        android:text="@string/iniciar"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="564dp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gustavoSachetto"
        android:textAlignment="center"
        android:textSize="17sp"
        android:layout_marginTop="121sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInstrucao"
        android:textColor="@color/white"
        />

</LinearLayout>