<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".Resultado">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="45sp"
        app:srcCompat="@drawable/logo"
        />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/trofeu"
        />

    <TextView
        android:id="@+id/txtParabens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="30sp"
        android:text="Parabéns Gustavo Sachetto!"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="69dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:text="@string/acertos"
        android:textColor="@color/cinzaClaro"
        android:textAlignment="center"
        android:textSize="19sp"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="69dp" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="10sp"
        android:text="5 Perguntas"
        android:textColor="@color/azulClick"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="69dp" />

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14sp"
        app:cornerRadius="15sp"
        android:layout_marginTop="40sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:backgroundTint="@color/vermelho"
        android:backgroundTintMode="@color/vermelhoClick"
        android:text="@string/reiniciar"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gustavoSachetto"
        android:textAlignment="center"
        android:textSize="17sp"
        android:layout_marginTop="61sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInstrucao"
        android:textColor="@color/white"
        />

</LinearLayout>